# seulgy-ai-analyst

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  analysis_multiplier.py  index.html  onboarding.html  pyproject.toml  run_report.py  run_suggest.py  start.py  test_scoring_improvement.py
data/: automotive_keywords.json  humanoid_keywords.json  smartglass_keywords.json  smartphone_keywords.json  space_datacenter_keywords.json
db_research/: README.md  _template.md
docker/: Dockerfile  docker-compose.yml
docs/: Research_Helper_Introduction.html  automotive_parity_plan_2026-05-30.md  automotive_pipeline.html  crawling_robots_review.md  data_workflow.html  humanoid_pipeline.html  process_overview.html  research_helper_user_guide.html  smartphone_pipeline.html  topic_pipeline_review_2026-05-07.md
frontend/: DESIGN_SYSTEM.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
reports/: glm_topic_suggestions.html
scripts/: _auto_research_helper.py  _batch_generate_reports.py  _diag_source_coverage.py  _print_topics.py  _smartglass_research_helper.py  _suggest_core.py  _verify_emerging_merge.py  ab_test_humanoid_weights.py  ab_test_report_pipeline.py  backfill_en_summary.py  batch_report_gen.py  build_abi_humanoid_archive.py  build_acea_archive.py  build_agility_robotics_archive.py  build_alixpartners_archive.py  build_all_archives.py  build_apptronik_archive.py  build_archive_viewer.py  build_arinsider_archive.py  build_arxiv_robotics_archive.py  build_arxiv_space_archive.py  build_autocar_archive.py  (+85 more)
(+100 files in other folders)
